Show survey only when it is active. If paused or finished display intefaces

--- a/SurveyTool/WebContent/_locales/lang_en.properties
+++ b/SurveyTool/WebContent/_locales/lang_en.properties
@@ -606,6 +606,10 @@ survey.process.pageInfo1=You are in page
 survey.process.pageInfo2=of
 survey.process.finishPage.title=Survey completed.
 survey.process.finishPage.body=Thank you for your collaboration. You can already close the page of your browser.
+survey.process.page.state.finished.title=Survey closed.
+survey.process.page.state.finished.body=This survey is not already available. Thank you very much for your collaboration.
+survey.process.page.state.paused.title=Survey not available temporarily.
+survey.process.page.state.paused.body=This survey is not available, please, try it later. Thank you very much for your collaboration.
 survey.process.charCounter=CHARACTERS.
 survey.process.title.charLimit=CHARACTERS MAX.
 survey.process.desc.charLimit=You can not continue writing because it has reached the limit of characters.
