--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -608,6 +608,10 @@ survey.process.pageInfo1=Estás en la página
 survey.process.pageInfo2=de
 survey.process.finishPage.title=Encuesta completada.
 survey.process.finishPage.body=Muchas gracias por su colaboración, ya puede cerrar la página de su navegador.
+survey.process.page.state.finished.title=Encuesta cerrada.
+survey.process.page.state.finished.body=Esta encuesta ya no está disponible. Muchas gracias por su colaboración.
+survey.process.page.state.paused.title=Encuesta no disponible temporalmente.
+survey.process.page.state.paused.body=Esta encuesta no está disponible, por favor, vuelva a intentarlo más tarde. Muchas gracias por su colaboración.
 survey.process.charCounter=CARACTERES.
 survey.process.title.charLimit=CARACTERES MAX.
 survey.process.desc.charLimit=No podrá seguir escribiendo debido a que ha alcanzado el limite de caracteres. 
