auto registration without confirmation mail

--- a/SurveyTool/WebContent/_locales/lang_en.properties
+++ b/SurveyTool/WebContent/_locales/lang_en.properties
@@ -20,6 +20,8 @@ msg.error.login.empty.username=Type your username
 msg.error.session.expired=The session is expired or not exist.
 msg.error.login.username.length=Type a username that has between 4 and 16 characters.
 msg.error.login.email=Type a valid email
+msg.error.login.reemail=This field does not match the email
+msg.error.login.email.exist=This email is already registered. Please tray with other email.
 msg.error.login.empty.password=Type your password at least 8 characters.
 msg.error.login.repassword=This field does not match the password
 
@@ -145,6 +147,7 @@ home.login.label.password=Password
 home.register.title=Register
 home.register.label.username=Username
 home.register.label.email=Email
+home.register.label.reemail=Repeat the email
 home.register.label.password=Password
 home.register.label.repassword=Repeat the password
 home.register.label.registeruser=User register
@@ -628,3 +631,21 @@ survey.process.numLimits=Number between
 survey.process.main.error.title=Unable to continue due the following reasons
 survey.process.main.error.desc.error=There are errors in the answers. Please correct them before continuing.
 survey.process.main.error.desc.mandatory=Please answer the mandatory questions before continuing.
+
+#******************
+# User Panel
+#******************
+userpanel.master.header.title=ILUNION User Panel
+userpanel.registration.title=Registration
+userpanel.registration.conditions.title=Conditions
+userpanel.registration.conditions.checkbox.label=I accept the conditions of use
+userpanel.registration.conditions.button=Sign up
+notAcceptConditions.window.title=Accept conditions
+notAcceptConditions.window.content=You must accept the conditions of use to continue with the registration.
+notAcceptConditions.window.button=Close
+notAcceptConditions.window.button.close=Close accept conditions
+userpanel.registration.accountCreation.title=Account creation
+userpanel.registration.confirmation.title=Confirmation and activation
+userpanel.registration.confirmation.content1=Thank you for joining the panel. You will receive a confirmation email in your email address. Click the link included to active your account.
+userpanel.registration.confirmation.content2=After that, you can log in to our user panel using your access data.
+userpanel.registration.confirmation.button=Log in
