--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -19,6 +19,8 @@ msg.error.empty_fields=Debe llenar todos los campos
 msg.error.login.empty.username=Escriba su nombre de usuario
 msg.error.login.username.length=Escriba un nombre de usuario que tiene entre 4 y 16 caracteres
 msg.error.login.email=Escriba un correo electrónico válido
+msg.error.login.reemail=Este campo no coincide con el correo electrónico
+msg.error.login.email.exist=Esta dirección de correo electronico ya está registrada. Por favor, pruebe con otra.
 msg.error.login.empty.password=Escriba su contraseña de al menos 8 caracteres.
 msg.error.login.repassword=Este campo no coincide con la contraseña
 
@@ -145,8 +147,9 @@ home.login.label.password=Contraseña
 home.register.title=Registro
 home.register.label.username=Nombre de usuario
 home.register.label.email=Email
+home.register.label.reemail=Reescribir email
 home.register.label.password=Contraseña
-home.register.label.repassword=Reescriba Contraseña
+home.register.label.repassword=Reescribir Contraseña
 home.register.label.registeruser=Registrar usuario
 home.register.label.login=Inicio sesión usuario
 
@@ -630,3 +633,21 @@ survey.process.numLimits=Número entre
 survey.process.main.error.title=No es posible continuar con la encuesta debido a
 survey.process.main.error.desc.error=Existe respuestas erroneas. Por favor, responda correctamente para continuar.
 survey.process.main.error.desc.mandatory=Por favor, responda las preguntas obligatorias para continuar.
+
+#******************
+# User Panel
+#******************
+userpanel.master.header.title=ILUNION Panel de Usuario
+userpanel.registration.title=Registro
+userpanel.registration.conditions.title=Condiciones
+userpanel.registration.conditions.checkbox.label=Acepto las condiciones de uso
+userpanel.registration.conditions.button=Regístrate
+notAcceptConditions.window.title=Aceptar condiciones
+notAcceptConditions.window.content=Debe aceptar las condiciones de uso para continuar con el registro.
+notAcceptConditions.window.button=Cerrar
+notAcceptConditions.window.button.close=Cerrar aceptar condiciones
+userpanel.registration.accountCreation.title=Creación de cuenta
+userpanel.registration.confirmation.title=Confirmación y activación
+userpanel.registration.confirmation.content1=Gracias por unirse al panel. Recivirá un correo de confirmación en su dirección de correo electrónico. Haga clic en el enlace incluido para activar su cuenta.
+userpanel.registration.confirmation.content2=Después de esto, usted podrá acceder al panel utilizando sus datos de acceso.
+userpanel.registration.confirmation.button=Iniciar sesión
