solved issues not all, stable version

--- a/SurveyTool/WebContent/_locales/lang_en.properties
+++ b/SurveyTool/WebContent/_locales/lang_en.properties
@@ -169,7 +169,7 @@ header.log.out.no = No
 #******************
 
 user_panel.title=User Panel
-user_panel.description=<p>The current version of this accessible suite includes an tool for creating surveys and tools, publish them and monitor basic performance metrics as the number of responses received or survey quotas.</p><p>Future versions of the accessible user feedback tool will include an accessible user panel to manage user databases and monitor panel performance. This will allow to improve the efficiency of surveys and to foster user participation.</p>
+user_panel.description=<p>The current version of this accessible suite includes a tool for creating surveys and polls, publish them and monitor some basic performance metrics as the number of responses received or survey quotas.</p><p>Future versions will include an accessible user panel to manage user databases and monitor panel performance. This will help to improve the efficiency of surveys and to foster user participation.</p>
 user_panel.link.survey=Survey
 user_panel.link.users=User list
 user_panel.link.statistics=Panel statistics
@@ -258,7 +258,7 @@ question.edit.custom_settings.title=Custom options
 question.edit.type=Type
 
 question.edit.logic.option.label=If answer to this question is
-question.edit.logic.option.goto.label=then
+question.edit.logic.option.goto.label=then jump to
 question.edit.logic.option.goto.continue=Continue
 question.edit.dependence.legend=dependence to the question:
 question.edit.dependence.action.label=Action on the question
@@ -468,7 +468,11 @@ file.player.yt.alert.volume_min=Volume level is minimum.
 
 confirmation.title=Confirmation
 confirmation.remove.title=Remove element
-confirmation.remove.message=This action will remove <span class="elem-to-remove-text" id="elementToRemoveText"></span>. Are you sure to do it?
+confirmation.remove.message=This action will remove <span id="confirmRemoveQuestion" class="hidden">the question: </span><span class="elem-to-remove-text" id="elementToRemoveText"></span>.
+confirmation.remove.message.dependences=The <span id="questionDPlural">questions</span><span id="questionDSingular">question</span> <span id='confirmRemoveQuestionDepList'></span> <span id="questionDHave">have</span><span id="questionDHas">has</span> dependencies associated with this question. 
+confirmation.remove.message.logic=The <span id="questionLPlural">questions</span><span id="questionLSingular">question</span> <span id='confirmRemoveQuestionLogicList'></span> <span id="questionLHave">have</span><span id="questionLHas">has</span> logic that leads to this question. 
+confirmation.remove.message.rules=This rules will be affected by the change.
+confirmation.remove.message.sure=Are you sure to do it?
 
 #******************
 # Accesibility
@@ -628,9 +632,9 @@ survey.process.title.numLimits=Number out of range.
 survey.process.desc.numLimits=The answer must be between
 survey.process.desc.numLimits.and=and
 survey.process.numLimits=Number between
-survey.process.main.error.title=Unable to continue due the following reasons
+survey.process.main.error.title=UNABLE TO CONTINUE
 survey.process.main.error.desc.error=There are errors in the answers. Please correct them before continuing.
-survey.process.main.error.desc.mandatory=Please answer the mandatory questions before continuing.
+survey.process.main.error.desc.mandatory=Please answer all mandatory questions.
 
 #******************
 # User Panel
