--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -122,7 +122,7 @@ placeholder.type_minValue=Escriba el valor mínimo_
 placeholder.type_maxValue=Escriba el valor máximo_
 label.yes=Si
 label.no=No
-login.invalid=Nombre de usuario o contraseña invalido
+login.invalid=Nombre de usuario o contraseña no valido
 register.invalid=Nombre de usuario o contraseña invalido
 register.exists.email=Este correo electronico ya existe en el sistema
 register.exists.username=Este nombre de usuario ya existe en el sistema
@@ -259,7 +259,7 @@ question.edit.custom_settings.title=Opciones de personalización
 question.edit.type=Tipo
 
 question.edit.logic.option.label=Si la respuesta a esta pregunta es
-question.edit.logic.option.goto.label=entonces
+question.edit.logic.option.goto.label=entonces saltar a
 question.edit.logic.option.goto.continue=Continuar
 question.edit.dependence.legend=dependencia para la pregunta:
 question.edit.dependence.action.label=Acción sobre la pregunta
@@ -468,7 +468,11 @@ file.player.yt.alert.volume_min=El volumen está al mínimo.
 
 confirmation.title=Confirmación
 confirmation.remove.title=Borrar elemento
-confirmation.remove.message=Esta acción borrará <span class="elem-to-remove-text" id="elementToRemoveText"></span>. ¿Está seguro de que quiere borrarlo?
+confirmation.remove.message=Esta acción borrará <span id="confirmRemoveQuestion" class="hidden">la pregunta: </span><span class="elem-to-remove-text" id="elementToRemoveText"></span>.
+confirmation.remove.message.dependences=<span id="questionDPlural">Las preguntas</span><span id="questionDSingular">La pregunta</span> <span id='confirmRemoveQuestionDepList' class='hidden'></span> <span id="questionDHave">tienen</span><span id="questionDHas">tiene</span> dependencias asociadas a esta pregunta. 
+confirmation.remove.message.logic=<span id="questionLPlural">Las preguntas</span><span id="questionLSingular">La pregunta</span> <span id='confirmRemoveQuestionLogicList' class='hidden'></span> <span id="questionLHave">tienen</span><span id="questionLHas">tiene</span> lógica que lleva a esta pregunta. 
+confirmation.remove.message.rules=Estas reglas se verán afectadas con el cambio.
+confirmation.remove.message.sure=¿Está seguro de que quiere borrarlo?
 
 #******************
 # Accesibility
@@ -630,9 +634,9 @@ survey.process.desc.numLimits=La respuesta debe estar entre
 survey.process.desc.numLimits.and=y
 survey.process.decimalsMax=DECIMALES MAX.
 survey.process.numLimits=Número entre
-survey.process.main.error.title=No es posible continuar con la encuesta debido a
+survey.process.main.error.title=NO ES POSIBLE CONTINUAR CON LA ENCUESTA
 survey.process.main.error.desc.error=Existe respuestas erroneas. Por favor, responda correctamente para continuar.
-survey.process.main.error.desc.mandatory=Por favor, responda las preguntas obligatorias para continuar.
+survey.process.main.error.desc.mandatory=Por favor, responda las preguntas obligatorias.
 
 #******************
 # User Panel
