--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -472,6 +472,7 @@ confirmation.remove.message=Esta acción borrará <span id="confirmRemoveQuestion"
 confirmation.remove.message.dependences=<span id="questionDPlural">Las preguntas</span><span id="questionDSingular">La pregunta</span> <span id='confirmRemoveQuestionDepList' class='hidden'></span> <span id="questionDHave">tienen</span><span id="questionDHas">tiene</span> dependencias asociadas a esta pregunta. 
 confirmation.remove.message.logic=<span id="questionLPlural">Las preguntas</span><span id="questionLSingular">La pregunta</span> <span id='confirmRemoveQuestionLogicList' class='hidden'></span> <span id="questionLHave">tienen</span><span id="questionLHas">tiene</span> lógica que lleva a esta pregunta. 
 confirmation.remove.message.rules=Estas reglas se verán afectadas con el cambio.
+confirmation.remove.message.section.rules=Todas las preguntas contenidas en esta sección serán borradas, esto puede afectar a las reglas de logica y dependencias.
 confirmation.remove.message.sure=¿Está seguro de que quiere borrarlo?
 
 #******************
