solved moveup question and logic issue

--- a/SurveyTool/WebContent/_locales/lang_en.properties
+++ b/SurveyTool/WebContent/_locales/lang_en.properties
@@ -475,7 +475,7 @@ confirmation.remove.message.logic=The <span id="questionLPlural">questions</span
 confirmation.remove.message.rules=This rules will be affected by the change.
 confirmation.remove.message.section.rules=All questions contained in this section will be removed, this can affect to the logic and dependence rules.
 confirmation.remove.message.sure=Are you sure to do it?
-confirmation.move.message.withdep=The destination page contains questions associated with dependencies. If you move the question these dependencies will be deleted. Are you sure to move this question?
+confirmation.move.message.withdep=The destination page contains questions associated with dependencies and logic. If you move the question these dependencies and logic will be deleted. Are you sure to move this question?
 
 #******************
 # Accesibility
