verification email registration

--- a/SurveyTool/WebContent/_locales/lang_en.properties
+++ b/SurveyTool/WebContent/_locales/lang_en.properties
@@ -111,6 +111,15 @@ language.en=English
 language.es=Spanish
 
 #******************
+# emails
+#******************
+
+email.verify.subject=Don't reply. Survey Tool: confirm account.
+email.verify.title=Confirm your email
+email.verify.text=Thank you for using the survey tool. With Survey Tool you can collaborate with multiple projects through our surveys.
+email.verify.link=Confirm my account
+
+#******************
 # general
 #******************
 
@@ -655,4 +664,7 @@ userpanel.registration.accountCreation.title=Account creation
 userpanel.registration.confirmation.title=Confirmation and activation
 userpanel.registration.confirmation.content1=Thank you for joining the panel. You will receive a confirmation email in your email address. Click the link included to active your account.
 userpanel.registration.confirmation.content2=After that, you can log in to our user panel using your access data.
+userpanel.registration.verification.title=Email verification
+userpanel.registration.verification.true.content=Your account has been successfully activated. You can now access the user panel with the following button to login.
+userpanel.registration.verification.false.content=This link is no longer available. You may already be registered, or that the link has expired.
 userpanel.registration.confirmation.button=Log in
