issues jesica part 1

--- a/SurveyTool/WebContent/_locales/lang_en.properties
+++ b/SurveyTool/WebContent/_locales/lang_en.properties
@@ -100,7 +100,7 @@ button.question.move.down=Move to the next position the question
 button.aria_label.add_content=Add new content
 button.section.new=Add new section
 button.logic=Logic
-button.dependences=dependences
+button.dependences=Dependences
 
 #******************
 # Language Select options
@@ -123,6 +123,7 @@ label.yes=Yes
 label.no=No
 
 login.invalid=Invalid username or password
+login.invalid.state.admin=Account not activated. Check your email and activate your account through confirmation email provided.
 register.invalid=Invalid username or password
 register.exists.email=This email already exists in the system
 register.exists.username=This username already exists in the system
@@ -470,12 +471,12 @@ confirmation.title=Confirmation
 confirmation.remove.title=Remove element
 confirmation.move.title=Move question
 confirmation.remove.message=This action will remove <span id="confirmRemoveQuestion" class="hidden">the question: </span><span class="elem-to-remove-text" id="elementToRemoveText"></span>.
-confirmation.remove.message.dependences=The <span id="questionDPlural">questions</span><span id="questionDSingular">question</span> <span id='confirmRemoveQuestionDepList'></span> <span id="questionDHave">have</span><span id="questionDHas">has</span> dependencies associated with this question. 
+confirmation.remove.message.dependences=The <span id="questionDPlural">questions</span><span id="questionDSingular">question</span> <span id='confirmRemoveQuestionDepList'></span> <span id="questionDHave">have</span><span id="questionDHas">has</span> dependences associated with this question. 
 confirmation.remove.message.logic=The <span id="questionLPlural">questions</span><span id="questionLSingular">question</span> <span id='confirmRemoveQuestionLogicList'></span> <span id="questionLHave">have</span><span id="questionLHas">has</span> logic that leads to this question. 
 confirmation.remove.message.rules=This rules will be affected by the change.
 confirmation.remove.message.section.rules=All questions contained in this section will be removed, this can affect to the logic and dependence rules.
 confirmation.remove.message.sure=Are you sure to do it?
-confirmation.move.message.withdep=The destination page contains questions associated with dependencies and logic. If you move the question these dependencies and logic will be deleted. Are you sure to move this question?
+confirmation.move.message.withdep=The destination page contains questions associated with dependences and logic. If you move the question these dependences and logic will be deleted. Are you sure to move this question?
 
 #******************
 # Accesibility
