--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -123,6 +123,7 @@ placeholder.type_maxValue=Escriba el valor máximo_
 label.yes=Si
 label.no=No
 login.invalid=Nombre de usuario o contraseña no valido
+login.invalid.state.admin=Cuenta pendiente de activar. Revise su correo electronico y active su cuenta mediante el correo de confirmación facilitado.
 register.invalid=Nombre de usuario o contraseña invalido
 register.exists.email=Este correo electronico ya existe en el sistema
 register.exists.username=Este nombre de usuario ya existe en el sistema
