Solved problem with matrix, ids of 'set to' and 'limit', and statistics

--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -589,6 +589,7 @@ statistics.single.title=Respuestas recibidas
 statistics.boxes.numAnswersByOption=Número de respuestas recibidas / Opción (%)
 statistics.menu.default=-Escoge pregunta-
 statistics.matrix.none=Ninguna
+statistics.results= Resultados
 
 #******************
 # Quota suveys
