nacho issues list 1

--- a/SurveyTool/WebContent/_locales/lang_en.properties
+++ b/SurveyTool/WebContent/_locales/lang_en.properties
@@ -31,6 +31,7 @@ msg.error.section.title = Type a section name
 
 msg.error.qstatement.text=Type a Question statement
 msg.error.question.title=Type a Question title
+msg.error.question.type.selected=Select a question type before creating the question.
 msg.error.dependence-option.text=This question and option were selected in a previous dependence
 
 msg.error.poll.title=Type a Poll title
@@ -72,6 +73,8 @@ button.close.dependences=Close dependences
 button.close.logic=Close logic
 button.create=Create
 button.create_new=Create new
+button.create_new_poll=Create new poll
+button.create_new_survey=Create new survey
 button.hide_question=Hide question
 button.import=Import
 button.remove_file=Remove file
@@ -80,6 +83,7 @@ button.remove_option=Remove option
 button.remove_dependence=Remove dependence
 button.remove_question=Remove question
 button.remove_pagebreak=Remove page-break
+button.edit_title=Edit title
 button.send=Send
 button.login=Login
 button.register=Register
@@ -180,8 +184,8 @@ header.log.out.no = No
 
 user_panel.title=User Panel
 user_panel.description=<p>The current version of this accessible suite includes a tool for creating surveys and polls, publish them and monitor some basic performance metrics as the number of responses received or survey quotas.</p><p>Future versions will include an accessible user panel to manage user databases and monitor panel performance. This will help to improve the efficiency of surveys and to foster user participation.</p>
-user_panel.link.survey=Survey
-user_panel.link.users=User list
+user_panel.link.survey=Survey management
+user_panel.link.users=User database
 user_panel.link.statistics=Panel statistics
 user_panel.link.settings=Panel settings
 
@@ -220,7 +224,7 @@ survey_manager.tab.surveys.state.filter.option=All states
 
 #Surveys
 survey_manager.surveys.title=Online survey tool
-survey_manager.surveys.description=<p>Here you can create and share online surveys. Currently, surveys can include six different types of questions and responses: form fields, text paragraphs, multiple choice questions (checkboxes), simple choice questions (radiobuttons), matrixs and likert scales. Advanced options allow to define question logic and dependences.</p><p>Click on <strong>Create new</strong> to design your first survey!</p>
+survey_manager.surveys.description=<p>Here you can create and share online surveys. Currently, surveys can include six different types of questions and responses: form fields, text paragraphs, multiple selection questions (checkboxes), simple choice questions (radiobuttons), matrixs and likert scales. Advanced options allow to define question logic and dependences.</p><p>Click on <strong>Create new</strong> to design your first survey!</p>
 survey_manager.surveys.table.caption=Surveys list
 survey_manager.surveys.table.column.deadline=Deadline
 survey_manager.surveys.table.column.state=State
@@ -236,7 +240,7 @@ survey_manager.surveys.notice=Important notice:
 
 #Polls
 survey_manager.polls.title=Online polling tool
-survey_manager.polls.description=<p>Here you can create and share online polls. Currently, online polls include the following features:</p><ul class="list-content"><li>Polls as simple choice questions (radiobuttons)</li><li>Current results are shown automatically after voting</li><li>An excel file with the current results can be downloaded from the admin panel</li><li>Polls can be personalized including an acknowledgement text and a link to direct users for further feedback (e.g. to product page)</li><li>Polls can be shared or embedded in webpages using HTML &lt;iframe&gt; code</li></ul><p>Click on <strong>Create new</strong> to design your first online poll!</p>
+survey_manager.polls.description=<p>Here you can create and share online polls. Currently, online polls include the following features:</p><ul class="list-content"><li>Polls as simple choice questions (radiobuttons)</li><li>Current results are shown automatically after voting</li><li>An excel file with the current results can be downloaded from the admin panel</li><li>Polls can be personalized including an acknowledgement text and a link to direct users for further feedback (e.g. to product page)</li><li>Polls can be shared or embedded in webpages using HTML &lt;iframe&gt; code</li></ul><p>Click on <strong>Create new poll</strong> to design your first online poll!</p>
 survey_manager.polls.table.caption=Polls list
 survey_manager.polls.table.column.deadline=Deadline
 survey_manager.polls.table.column.poll=Poll
@@ -250,14 +254,16 @@ survey_manager.polls.table.poll_responses=polls
 # Question
 #******************
 
-question.statement=Question statement
+question.statement=Title
 question.otherLength=Other field length
 question.mandatory=Mandatory
+question.mandatory.yes=Yes
+question.mandatory.no=No
 question.notAnswerRequeried=Optional
 question.edit.legend.options=Options
 question.edit.placeholder.option=Option
 question.edit.aria_label.option=Option title
-question.edit.statementSetting.title=Statements settings
+question.edit.statementSetting.title=Content settings
 question.edit.description.title=Description / Instructions
 question.edit.dependences.title=Dependences and logic
 question.edit.description.aria_label=Description question
@@ -309,8 +315,8 @@ question.new.question_type = Select question type
 question.new.title=Add new question
 question.new.basic_settings.title=Basic settings
 question.new.basic_settings.aria_label.close=Close basic settings
-question.new.formfield=Form field
-question.new.paragraph=Paragraph
+question.new.formfield=Short answer
+question.new.paragraph=Long text
 question.new.multiple=Multiple
 question.new.simple=Simple
 question.new.ordering=Ordering
@@ -367,7 +373,7 @@ survey.edit.tab.go_quota=Go to survey quotas
 survey.edit.title=Edit Survey
 survey.statistic.title=Survey Statistics
 survey.edit.tab.go_statistics=Go to survey statistics
-survey.edit.label.lang_version=Language version
+survey.edit.label.lang_version=Traductions
 survey.edit.info.aria_label.display=Display survey info
 survey.edit.info.aria_label.title=Survey title
 survey.edit.info.aria_label.copy=Copy survey URL to clipboard
