--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -32,6 +32,7 @@ msg.error.section.title = Escriba un nombre de sección
 
 msg.error.qstatement.text=Escriba un contenido para la cuestión
 msg.error.question.title=Escriba un Título de la pregunta
+msg.error.question.type.selected=Seleccione un tipo de pregunta antes de crear la pregunta.
 msg.error.dependence-option.text=Esta pregunta y opción fueron seleccionados en otra dependencia
 
 msg.error.poll.title=Escriba un título para la encuesta
@@ -73,6 +74,8 @@ button.close.dependences=Cerrar dependencias
 button.close.logic=Cerrar lógica
 button.create=Crear
 button.create_new=Crear nuevo
+button.create_new_poll=Crear nuevo sondeo
+button.create_new_survey=Crear nueva encuesta
 button.hide_question=Ocultar pregunta
 button.import=Importar
 button.remove_file=Borrar fichero
@@ -88,6 +91,7 @@ button.submit=Enviar
 button.survey_preview=Previsualización de la encuesta
 button.vote=Votar
 button.remove_section=Borrar sección
+button.edit_title=Editar titulo
 button.hide_section=Ocultar sección
 button.done=Hecho
 button.continue=Continuar
@@ -180,10 +184,10 @@ header.log.out.no = No
 
 user_panel.title=Panel de Usuario
 user_panel.description=<p>La versión actual de esta herramienta accesible permite crear encuestas y sondeos, así como publicarlos y supervisar métricas básicas de como está funcionando la encuesta, como son el número de respuestas recibidas o las cuotas de la encuesta.</p><p>Futuras versiones de esta herramienta accesible para recibir retroalimentación de los usuarios incluirán un panel de usuario accesible para gestionar bases de datos de usuarios y controlar el rendimiento del panel. Esto permitirá mejorar la eficiencia de las encuestas y fomentar la participación de los usuarios.</p>
-user_panel.link.survey=Encuesta
-user_panel.link.users=Lista de usuarios
-user_panel.link.statistics=Panel de estadisticas
-user_panel.link.settings=Panel configuración
+user_panel.link.survey=Gestión de encuestas
+user_panel.link.users=Base de datos de usuarios
+user_panel.link.statistics=Estadísticas del panel
+user_panel.link.settings=Configuración del panel
 
 #******************
 # Survey Engine
@@ -198,7 +202,7 @@ question.chooseOne=Elige una opción
 
 survey_manager.title=Gestión Encuesta
 survey_manager.tab.surveys=Encuestas
-survey_manager.tab.polls=Polls
+survey_manager.tab.polls=Sondeos
 survey_manager.tab.surveys.label.download=descargar
 survey_manager.tab.surveys.label.pause=pausar
 survey_manager.tab.surveys.label.activate=activar
@@ -221,7 +225,7 @@ survey_manager.table.content.none=ninguno
 
 #Surveys
 survey_manager.surveys.title=Herramienta de encuestas en línea
-survey_manager.surveys.description=<p>Aquí puede crear y compartir encuestas en línea. Actualmente, las encuestas pueden incluir seis tipos diferentes de preguntas y respuestas: preguntas de texto (cortas o largas), preguntas de elección múltiple (casillas de verificación), preguntas de opción simples (botones de radio), matrices y escalas. Existen además opciones avanzadas para definir dependencias entres pregunats y lógica.</p><p>Click en <strong>Crear nuevo</strong> para diseñar tu primera encuesta!</p>
+survey_manager.surveys.description=<p>Aquí puede crear y compartir encuestas en línea. Actualmente, las encuestas pueden incluir seis tipos diferentes de preguntas y respuestas: preguntas de texto (cortas o largas), preguntas de selección múltiple (casillas de verificación), preguntas de opción simples (botones de radio), matrices y escalas. Existen además opciones avanzadas para definir dependencias entres pregunats y lógica.</p><p>Click en <strong>Crear nuevo</strong> para diseñar tu primera encuesta!</p>
 survey_manager.surveys.table.caption=Lista de encuestas
 survey_manager.surveys.table.column.deadline=Fecha tope
 survey_manager.surveys.table.column.state=Estado
@@ -237,28 +241,30 @@ survey_manager.surveys.notice=Información importante:
 
 #Polls
 survey_manager.polls.title=Herramienta de sondeo en línea
-survey_manager.polls.description=<p>Aquí puede crear y compartir encuestas(polls) en línea. Actualmente, los polls incluyen las siguientes caracteristicas:</p><ul class="list-content"><li>Polls como una simple eleccion en una pregunta(radiobuttons)</li><li>Los resultados actuales se muestran automáticamente despues de votar</li><li>Desde el panel de administrador se puede descargar un excel con los resultados actuales</li><li>Las encuestas se pueden personalizar incluyendo un texto y un enlace para más de realimentación (por ejemplo a la página del producto)</li><li>Los polls se pueden compartir e incrustar en páginas web usándo código HTML &lt;iframe&gt;</li></ul><p>Click en <strong>Crear nuevo</strong> para diseñar tu primer poll!</p>
-survey_manager.polls.table.caption=Listado Polls
+survey_manager.polls.description=<p>Aquí puede crear y compartir sondeos(polls) en línea. Actualmente, los sondeos incluyen las siguientes caracteristicas:</p><ul class="list-content"><li>Sondeos como una simple eleccion en una pregunta(radiobuttons)</li><li>Los resultados actuales se muestran automáticamente despues de votar</li><li>Desde el panel de administrador se puede descargar un excel con los resultados actuales</li><li>Las encuestas se pueden personalizar incluyendo un texto y un enlace para más de realimentación (por ejemplo a la página del producto)</li><li>Los sondeos se pueden compartir e incrustar en páginas web usándo código HTML &lt;iframe&gt;</li></ul><p>Click en <strong>Crear nuevo sondeo</strong> para diseñar tu primer poll!</p>
+survey_manager.polls.table.caption=Listado Sondeos
 survey_manager.polls.table.column.deadline=Fecha tope
-survey_manager.polls.table.column.poll=Poll
-survey_manager.polls.table.column.url=Poll URL
+survey_manager.polls.table.column.poll=Sondeos
+survey_manager.polls.table.column.url=Sondeo URL
 survey_manager.polls.table.column.actions=Acciones
-survey_manager.polls.table.column.num_responses=Polls respondidos
+survey_manager.polls.table.column.num_responses=Sondeos respondidos
 survey_manager.polls.msg.no_polls=No hay encuestas creadas por ti.
-survey_manager.polls.table.poll_responses=polls
+survey_manager.polls.table.poll_responses=sondeos
 
 #******************
 # Question
 #******************
 
-question.statement=Contenido pregunta
+question.statement=Título
 question.otherLength=Tamaño de otros campos
 question.mandatory=Obligatorio
+question.mandatory.yes=Sí
+question.mandatory.no=No
 question.notAnswerRequeried=Opcional
 question.edit.legend.options=Opciones
 question.edit.placeholder.option=Opcion
 question.edit.aria_label.option=Titulo de la opción
-question.edit.statementSetting.title=Configuración de la pregunta
+question.edit.statementSetting.title=Configuración del contenido
 question.edit.description.title=Descripción / Instrucciones
 question.edit.dependences.title=Dependencias y lógica
 question.edit.description.aria_label=Descripción de la pregunta
@@ -308,8 +314,8 @@ question.new.question_type = Seleccionar tipo de pregunta
 question.new.title=Añadir nueva pregunta
 question.new.basic_settings.title=Configuración basica
 question.new.basic_settings.aria_label.close=Cerrar configuración basica.
-question.new.formfield=Campo de formulario
-question.new.paragraph=Parrafo
+question.new.formfield=Respuesta corta
+question.new.paragraph=Texto largo
 
 question.new.multiple=Multiple
 question.new.simple=Simple
@@ -367,7 +373,7 @@ survey.edit.tab.go_quota=Ir a las cuotas de la encuesta
 survey.edit.title=Editar Encuesta
 survey.statistic.title=Estadísticas de Encuesta
 survey.edit.tab.go_statistics=Ir a la estadística de la encuesta
-survey.edit.label.lang_version=Version lenguaje
+survey.edit.label.lang_version=Traducciones
 survey.edit.info.aria_label.display=Pantalla de datos de la encuesta
 survey.edit.info.aria_label.title=Titulo encuesta
 survey.edit.info.aria_label.copy=Copiar URL de la encuesta en el portapapeles.
@@ -491,7 +497,7 @@ confirmation.move.message.withdep=La página destino contiene preguntas asociadas
 # Accesibility
 #******************
 
-accesibility.question.mandatory=Obligatorio
+accesibility.question.mandatory=Obligatoria
 accesibility.question.type=Tipo de pregunta
 accesibility.question.matrix.type=Selección de tipo de matriz
 accesibility.question.matrix.remove.item=Eliminar elemento
@@ -534,7 +540,7 @@ profile.button.accept=Aceptar
 #******************
 # body content
 #******************
-bcontent.title=Texto introductorio
+bcontent.title=Contenido introductorio
 bcontent.statement=Texto para la descripción
 accesibility.bcontent=A continuación escribe el contenido del texto introductorio. Usa Ctrl/Cmd+B para negrita; Ctrl/Cmd+I para cursiva; Ctrl/Cmd+U para subrayar; Shift+Tab para reducir sangría; Tab para aumentar sangría; Ctrl/Cmd+L para alinear izquierda; Ctrl/Cmd+E para centrar; Ctrl/Cmd+R para alinear a la derecha; Ctrl/Cmd+J para justificar; Ctrl/Cmd+Z para deshacer; y Ctrl/Cmd+Y para rehacer.
 
