nacho list, body content help and login and register submit with intro

--- a/SurveyTool/WebContent/_locales/lang_en.properties
+++ b/SurveyTool/WebContent/_locales/lang_en.properties
@@ -565,7 +565,7 @@ bcontent.remove=Remove Hyperlink
 bcontent.undo=Undo (Ctrl/Cmd+Z)
 bcontent.redo=Redo (Ctrl/Cmd+Y)
 
-bcontent.exithelp=Press the Esc key or Shift + Esc keys to exit the editor.
+bcontent.exithelp=If you use keyboard navigation, press Esc or Shift + Esc to exit the editor.
 
 #******************
 # Types suveys
