--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -567,7 +567,7 @@ bcontent.remove=Quitar hipervínculo
 bcontent.undo=Deshacer (Ctrl/Cmd+Z)
 bcontent.redo=Rehacer (Ctrl/Cmd+Y)
 
-bcontent.exithelp=Pulsa la tecla "Esc" o "Shift + Esc" para salir del editor.
+bcontent.exithelp=Si navegas con teclado, pulsa la tecla "Esc" o "Shift + Esc" para salir del editor.
 
 #******************
 # Types suveys
